--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
-	<div id="analyzeButton">
-	</div>
+	<p id="analyzeButton">
+	</p>
 	<div id="bits">
 	</div>
 </body>
