--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
-	<p id="analyzeButton">Analyze</p>
+	<p id="analyzeButton" onclick="analyze()">Analyze</p>
 	<div id="bits">
 	</div>
 </body>
