--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 	<p id="analyzeButton" onclick="analyze()">Analyze</p>
 	<div id="bits">
 	</div>
+	<p id="reset" onclick="reset()">Reset</p>
 </body>
 </html>
