--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<p id="analyzeButton" onclick="analyze()">Analyze</p>
 	<div id="bits">
 	</div>
-	<p id="reset" onclick="reset()">Reset</p>
+	<p>Bytes: <span id="myBytes"></span></p>
+	<p id="restart" onclick="restart()">Reset</p>
+	<div id="errorWindow"></div>
 </body>
 </html>
