--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	</div>
 	<p>Bytes: <span id="myBytes"></span></p>
 	<p id="restart" onclick="restart()">Reset</p>
+	<div id="bitToByte" onclick="bitToByte()">To Byte</div>
 	<div id="errorWindow"></div>
 </body>
 </html>
