--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<p id="analyzeButton" onclick="analyze()">Analyze</p>
 	<div id="bits">
 	</div>
-	<p>Bytes: <span id="myBytes"></span></p>
+	<p>Bytes: <span id="bytes"></span></p>
 	<p id="restart" onclick="restart()">Reset</p>
 	<div id="bitToByte" onclick="bitToByte()">To Byte</div>
 	<div id="errorWindow"></div>
