debugged if else statement in tobyte

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
 	<p id="analyzeButton" onclick="analyze()">Analyze</p>
-	<div id="bits">
-	</div>
+	<p>Bits: <span id="bits"></span></p>
 	<p>Bytes: <span id="bytes"></span></p>
 	<p id="restart" onclick="restart()">Reset</p>
 	<div id="bitToByte" onclick="bitToByte()">To Byte</div>
