--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 	<p id="analyzeButton" onclick="analyze()">Analyze</p>
 	<p>Bits: <span id="bits"></span></p>
 	<p>Bytes: <span id="bytes"></span></p>
-	<p id="restart" onclick="restart()">Reset</p>
-	<div id="bitToByte" onclick="bitToByte()">To Byte</div>
+	<div id="buttons">
+		<p id="restart" onclick="restart()">Reset</p>
+		<div id="bitToByte" onclick="bitToByte()">To Byte</div>
+	</div>
 	<div id="errorWindow"></div>
 </body>
 </html>
