--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 	<p id="analyzeButton" onclick="ControlPanel.analyze()">Analyze</p>
 	<p>Bits: <span id="bits"></span></p>
+	<p id="bitLoop">Loop intensity: <span id="bitLoopStrength"></span></p>
 	<p>Bytes: <span id="bytes"></span></p>
 	<div id="buttons">
 		<p id="restart" onclick="ControlPanel.restart()">Reset</p>
