js loaded async

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Analyze</title>
-	<script src="Analyze.js"></script>
+	<script async src="Analyze.js"></script>
 	<link href="style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
