New Loop button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 	<p>Bytes: <span id="bytes"></span></p>
 	<div id="buttons">
 		<p id="restart" onclick="ControlPanel.restart()">Reset</p>
-		<div id="bitToByte" onclick="ControlPanel.bitToByte()">To Byte</div>
+		<div class="conversionButton" style="background-color: green;" id="bitToByte" onclick="ControlPanel.bitToByte()">To Byte</div>
+    <div class="converstionButton" style="background-color: blue;"id = "bitLoop" onclick="ControlPanel.bitLoop()">New Bit Loop</div>
 	</div>
 	<div id="errorWindow"></div>
 </body>
