made the button id a class

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div id="buttons">
 		<p id="restart" onclick="ControlPanel.restart()">Reset</p>
 		<div class="conversionButton" style="background-color: green;" id="bitToByte" onclick="ControlPanel.bitToByte()">To Byte</div>
-    <div class="converstionButton" style="background-color: blue;"id = "bitLoop" onclick="ControlPanel.bitLoop()">New Bit Loop</div>
+    <div class="conversionButton" style="background-color: blue;"id = "bitLoop" onclick="ControlPanel.bitLoop()">New Bit Loop</div>
 	</div>
 	<div id="errorWindow"></div>
 </body>
