--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<p id="bitLoop">Loop intensity: <span id="bitLoopStrength"></span></p>
 	<p>Bytes: <span id="bytes"></span></p>
 	<div id="buttons">
-		<div class="conversiontButton" style="background-color: grey" id="restart" onclick="ControlPanel.restart()">Reset</div>
+		<div class="conversionButton" style="background-color: grey" id="restart" onclick="ControlPanel.restart()">Reset</div>
 		<div class="conversionButton" style="background-color: green;" id="bitToByte" onclick="ControlPanel.bitToByte()">To Byte</div>
     <div class="conversionButton" style="background-color: blue;"id = "bitLoop" onclick="ControlPanel.bitLoop()">New Bit Loop</div>
 	</div>
